[autofill] Move fixups to be invoked after initial database load

Bug: 868533
Change-Id: Ieb2d140b7293de20e6c53f6ab497308b4df7dc0f
Reviewed-on: https://chromium-review.googlesource.com/1153665
Commit-Queue: Roger McFarlane <rogerm@chromium.org>
Commit-Queue: Sebastien Seguin-Gagnon <sebsg@chromium.org>
Reviewed-by: Sebastien Seguin-Gagnon <sebsg@chromium.org>
Cr-Commit-Position: refs/heads/master@{#579414}